--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ log_level = info
 
 [Database]
 db_name = pokemon
-db_host = localhost
+db_host = mariadb
 db_port = 3306
 db_user = user
 db_password = password
