--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -15,12 +15,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        apt-get update \
-          && apt -y install libmariadb3 libmariadb-dev \
-          && apt -y install gcc
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Lint with flake8
       run: |
@@ -31,7 +27,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest ./tests.py
+        pytest ./src/tests/test_main.py
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
