--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+        PYTHONPATH=. pytest
 
     - name: Lint with flake8
       run: |
