--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -18,6 +18,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         PYTHONPATH=. pytest
+        if [ -f requirements.txt ]; then pip install --prefer-binary --no-cache-dir --upgrade -r requirements.txt; fi
 
     - name: Lint with flake8
       run: |
