Add idea to gitignore. Changed dev hostname to correspond to container hostname. Deleted docker-compose.yml

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ log_level = info
 
 [Database]
 db_name = pokemon
-db_host = mariadb
+db_host = pokepy-mariadb
 db_port = 3306
 db_user = user
 db_password = password
