Fix for multiline contents of the private filed created in the deploy step

--- a/.github/workflows/deploy_on_release.yml
+++ b/.github/workflows/deploy_on_release.yml
@@ -21,7 +21,14 @@ jobs:
       - name: Generate SSH keys
         run: |
           ssh-keygen -t rsa -b 2048 -f my_azure_key -q -N ""
-          echo "SSH_PRIVATE_KEY=$(cat my_azure_key)" >> $GITHUB_ENV
+
+          # Fetch the SSH private key
+          # Read the contents of the file and append it to the $GITHUB_ENV
+          # The following three lines avoid a multiline error 
+          echo "SSH_PRIVATE_KEY<<EOF" >> $GITHUB_ENV
+          cat ~/.ssh/id_rsa >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
           echo "SSH_PUBLIC_KEY=$(cat my_azure_key.pub)" >> $GITHUB_ENV
 
       - name: Check if VM exists
