--ssh-key-value command to create azure vm should reference the file and not plain tekst

--- a/.github/workflows/deploy_on_release.yml
+++ b/.github/workflows/deploy_on_release.yml
@@ -29,8 +29,6 @@ jobs:
           cat ./my_azure_key >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-          echo "SSH_PUBLIC_KEY=$(cat my_azure_key.pub)" >> $GITHUB_ENV
-
       - name: Check if VM exists
         id: check_vm
         run: |
@@ -48,7 +46,7 @@ jobs:
           RESOURCE_GROUP=${{ vars.RESOURCE_GROUP }}
           VM_NAME=${{ vars.PREFIX_NAME_VM }}Backend
           DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
-          az vm create --resource-group $RESOURCE_GROUP --name $VM_NAME --image "Canonical:0001-com-ubuntu-minimal-jammy:minimal-22_04-lts-gen2:latest" --admin-username $DOCKERHUB_USERNAME --ssh-key-value $SSH_PUBLIC_KEY --assign-identity --public-ip-sku Standard --location westeurope --size Standard_B1s --nic-delete-option delete --os-disk-delete-option delete --storage-sku Standard_LRS
+          az vm create --resource-group $RESOURCE_GROUP --name $VM_NAME --image "Canonical:0001-com-ubuntu-minimal-jammy:minimal-22_04-lts-gen2:latest" --admin-username $DOCKERHUB_USERNAME --ssh-key-value ./my_azure_key.pub --assign-identity --public-ip-sku Standard --location westeurope --size Standard_B1s --nic-delete-option delete --os-disk-delete-option delete --storage-sku Standard_LRS
 
       - name: Get VM public IP address
         run: |
