--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Test with pytest
       run: |
         PYTHONPATH=. pytest
-        pytest ./src/tests/test_main.py
+        pytest ./src/tests/
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
