--- a/.github/workflows/deploy_on_release.yml
+++ b/.github/workflows/deploy_on_release.yml
@@ -48,14 +48,9 @@ jobs:
           VM_NAME=${{ vars.PREFIX_NAME_VM }}Backend
           DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
           az vm create --resource-group $RESOURCE_GROUP --name $VM_NAME --image "Canonical:0001-com-ubuntu-minimal-jammy:minimal-22_04-lts-gen2:latest" --admin-username $DOCKERHUB_USERNAME --ssh-key-value ./my_azure_key.pub --assign-identity --public-ip-sku Standard --location westeurope --size Standard_B1s --nic-delete-option delete --os-disk-delete-option delete --storage-sku Standard_LRS
-          
-          NIC_ID=$(az vm nic list --resource-group $RESOURCE_GROUP --vm-name $VM_NAME --query "[0].id" -o tsv)
-
-          # Get the Public IP Address ID
-          PUBLIC_IP_ID=$(az network nic show --ids $NIC_ID --query "ipConfigurations[0].publicIpAddress.id" -o tsv)
 
           # Get the Public IP Address
-          PUBLIC_IP=$(az network public-ip show --ids $PUBLIC_IP_ID --query "ipAddress" -o tsv)
+          PUBLIC_IP=$(az vm show -d -g $RESOURCE_GROUP -n $VM_NAME --query publicIps -o tsv)
 
           echo "AZURE_PUBLIC_IP=$PUBLIC_IP" >> $GITHUB_ENV
 
