--- a/.github/workflows/deploy_on_release.yml
+++ b/.github/workflows/deploy_on_release.yml
@@ -46,8 +46,34 @@ jobs:
         run: |
           RESOURCE_GROUP=${{ vars.RESOURCE_GROUP }}
           VM_NAME=${{ vars.PREFIX_NAME_VM }}Backend
+          NSG_NAME=${{ vars.PREFIX_NAME_VM }}BackendNSG
           AZURE_USERNAME=${{ secrets.AZURE_USERNAME }}
           az vm create --resource-group $RESOURCE_GROUP --name $VM_NAME --image "Canonical:0001-com-ubuntu-minimal-jammy:minimal-22_04-lts-gen2:latest" --admin-username $AZURE_USERNAME --ssh-key-value ./my_azure_key.pub --assign-identity --public-ip-sku Standard --location westeurope --size Standard_B1s --nic-delete-option delete --os-disk-delete-option delete --storage-sku Standard_LRS
+          az vm open-port --resource-group $RESOURCE_GROUP --name $VM_NAME --port 22 
+          az network nsg rule create \
+            --resource-group $RESOURCE_GROUP \
+            --nsg-name $NSG_NAME \
+            --name Allow-HTTP-80 \
+            --protocol Tcp \
+            --direction Inbound \
+            --priority 1001 \
+            --source-address-prefixes '*' \
+            --source-port-ranges '*' \
+            --destination-address-prefixes '*' \
+            --destination-port-ranges 80 \
+            --access Allow
+          az network nsg rule create \
+            --resource-group $RESOURCE_GROUP \
+            --nsg-name $NSG_NAME \
+            --name Allow-HTTP-22 \
+            --protocol Tcp \
+            --direction Inbound \
+            --priority 1001 \
+            --source-address-prefixes '*' \
+            --source-port-ranges '*' \
+            --destination-address-prefixes '*' \
+            --destination-port-ranges 22 \
+            --access Allow
           echo "VM_EXISTS=true" >> $GITHUB_ENV
 
       - name: Get VM public IP address
